# Commandos

./: .gitignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Commands.md  LICENSE  README.md  angular.json  dos_commander.code-workspace  karma.conf.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tslint.json
.github/workflows/: codeql-analysis.yml  publish.yml  test.yml
e2e/src/: app.e2e-spec.ts  app.po.ts
patches/: @angular-devkit+build-angular+12.0.0.patch  @cds+core+5.6.0.patch  @tauri-apps+api+1.0.0-beta.5.patch
src/: index.html  main.ts  splash.html  styles.scss  test.ts  variables.scss
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  git.rs  logger.rs  main.rs  open_cmd.rs  system_tray.rs
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
src/app/core/services/: index.ts
src/app/git/: git-perf.ts
src/app/git/commands/: base.ts  branch.ts  cherry-pick.ts  commit.ts  config.ts  index.ts  log.ts  prune.ts  remote.ts  repository.ts  rev-list.ts  status.ts  workspace.ts
src/app/git/model/: branch.ts  file.ts  index.ts  log.ts  status.ts
src/app/git/parsers/: branch.ts  index.ts  log.ts  status.spec.ts  status.ts
src/app/layout/: layout.module.ts
src/app/layout/base/: base.component copy.html  base.component.html  base.component.scss  base.component.spec.ts  base.component.ts
src/app/layout/nav-less/: nav-less.component.html  nav-less.component.spec.ts  nav-less.component.ts
src/app/routes/about/: about-routing.module.ts  about.component.html  about.component.scss  about.component.spec.ts  about.component.ts  about.module.ts
src/app/routes/add-repository/: add-repository-routing.module.ts  add-repository.component.html  add-repository.component.scss  add-repository.component.spec.ts  add-repository.component.ts  add-repository.module.ts
src/app/routes/changelog/: changelog-routing.module.ts  changelog.component.html  changelog.component.spec.ts  changelog.component.ts  changelog.module.ts
src/app/routes/detail/: detail-routing.module.ts  detail.component.html  detail.component.spec.ts  detail.component.ts  (+1 more)
src/app/shared/: clarity-icons.module.ts  shared.module.ts
src/assets/: changelog.md
src/assets/i18n/: de.json  en.json
src/assets/particles/: particles.min.js  particlesjs.json
src/environments/: environment.prod.ts  environment.ts
src/theme/: animations.scss  button.scss  contextmenu.scss  diff.scss  forms.scss  global.scss  history.scss  import.scss  layout.scss  scroll.scss  tree.scss  typo.scss  variables.scss
(+158 files in other folders)
