[package]
name = "app"
version = "0.6.0"
description = "Commandos is a multi git repo client"
authors = [ "Dominik Schenk" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
serde_json = "1.0"
serde_repr = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
log4rs = { version = "1.0.0", features = [
  "rolling_file_appender",
  "compound_policy",
  "size_trigger",
  "fixed_window_roller"
] }
log = { version = "0.4.0", features = [ "std" ] }
tauri = { version = "1.0.0-beta.5", features = ["api-all"] }
# , "system-tray", "menu"

[patch.crates-io]
wry = { git = "https://github.com/tauri-apps/wry", rev = "e28bcce0884937365013fda3098f64f9956d569f" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
